--- a/samconfig.toml
+++ b/samconfig.toml
@@ -16,9 +16,9 @@ disable_rollback = true
 [staging]
 [staging.deploy]
 [staging.deploy.parameters]
-stack_name = "todo-list-aws"
+stack_name = "todo-list-aws2"
 s3_bucket = "aws-sam-cli-managed-staging-samclisourcebucket-upt09go84tay"
-s3_prefix = "todo-list-aws"
+s3_prefix = "todo-list-aws2"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
