--- a/samconfig.toml
+++ b/samconfig.toml
@@ -23,7 +23,7 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
 image_repositories = []
-resolve_s3 = true
+resolve_s3 = false
 confirm_changeset = true
 
 [production]
