--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,9 +2,9 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "todo-list-aws3"
+stack_name = "todo-list-migpar"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-upt09go84tay"
-s3_prefix = "todo-list-aws3"
+s3_prefix = "todo-list-migpar"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"default\""
@@ -16,9 +16,9 @@ disable_rollback = true
 [staging]
 [staging.deploy]
 [staging.deploy.parameters]
-stack_name = "todo-list-aws3"
+stack_name = "todo-list-migpar"
 s3_bucket = "aws-sam-cli-managed-staging-samclisourcebucket-upt09go84tay"
-s3_prefix = "todo-list-aws3"
+s3_prefix = "todo-list-migpar"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"staging\""
@@ -29,9 +29,9 @@ confirm_changeset = true
 [production]
 [production.deploy]
 [production.deploy.parameters]
-stack_name = "todo-list-aws-production"
+stack_name = "todo-list-migpar-production"
 s3_bucket = "aws-sam-cli-managed-production-samclisourcebucket-upt09go84tay"
-s3_prefix = "todo-list-aws3"
+s3_prefix = "todo-list-migpar"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"production\""
